maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:10: error: '(' expected but identifier found.
  if estFaceMur() {
     ^Escaper:16: error: illegal start of simple expression
}
^